--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,4 @@ __pycache__
 /infra/aws/.pulumi-passphrase
 /letsencrypt/acme.json
 scripts/containers/stack/graphql-engine-arm64-v2.48.4
+scripts/containers/stack/cli-hasura-linux-arm64
